--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  // display: flex; // Remove centering
+  // place-items: center; // Remove centering
   min-width: 320px;
   min-height: 100vh;
 }
